2002-01-19  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* tabular.C (Validate): remove broken optimization (fixes bug #201)

	* paragraph.C (startTeXParParams): 
	(endTeXParParams): new methods. The LaTeX code to
	start/end paragraph formatting
	(simpleTeXOnePar): call startTeXParParams also when paragraph is
	empty (fixes bug #200)

	* vspace.C (inPixels): adapt to the change below
	(inPixels): [later] more cleanups (remove unused variables)

	* lyxlength.C (inPixels): change to use a width and a height as
	parameter.

2002-01-18  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* lyxlength.C (asLatexString): \pagewidth is not a LaTeX macro.
	Replaced with \paperwidth

	* DepTable.C (insert): add std:: qualifier

2002-01-18  Allan Rae  <rae@lyx.org>

	* text2.C (removeRow): add comment.  Should other refresh_?? vars be
	updated also?
	
	* text.C (drawInset): Turned out I didn't know enough about how 
	rebreaking worked.  This fixes most of the redraw problems.  I see
	an occasional cursor trail when a line is broken now and the cursor
	placement can seem out by a few pixels also after a rebreak.

2002-01-17  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* buffer.C (parseSingleLyXformat2Token): update because minipage
	width is now a LyXLength

	* lyxlength.C (inPixels): new method, extracted from VSpace::inPixels

	* BufferView_pimpl.C (smartQuote): fix insertion of quote inset in
	math insets

2002-01-17  Juergen Vigna  <jug@sad.it>

	* lyxfunc.C (dispatch): fixed PARAGRAPH_GOTO

	* BufferView2.C (lockInset): call edit() so that theLockingInset()
	is set correctly and the inset is updated correctly.

2002-01-17  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* CutAndPaste.C (pasteSelection): move the setInsetOwner call at
	the beginning of the loop.

2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* lyxrc.C: improve help for use_scalable_fonts

2002-01-17  Allan Rae  <rae@lyx.org>

	* lyx_cb.C (ShowMessage): make sure we have a user and an owner.
